Object/embed elements embedding cross-origin images aren't always clickable.
Categories
(Core :: DOM: Events, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox136 | --- | fixed |
People
(Reporter: farre, Assigned: edgar)
References
Details
Attachments
(1 file)
object/embed element in an anchor embedding an image is only clickable if the mouse enters the image from below.
Reporter | ||
Comment 1•15 days ago
|
||
See the video in bug 1935609 comment 15.
This depends on having the changes from 1935609.
Reporter | ||
Updated•15 days ago
|
Reporter | ||
Comment 2•15 days ago
|
||
Sorry for bugging you again about this, but I'm trying to figure out which component that causes this error. It might be DOM: Core
, but I'm not sure. Any help finding the right person to tackle this is appreciated.
Comment 3•15 days ago
|
||
It is clickable tho, right? It's just the cursor that's wrong? At least that was what happened with the patches in bug 1935609...
If so I'd look at EventStateManager::SetCursor to see which frame are we getting the cursor from.
Reporter | ||
Comment 4•11 days ago
|
||
It looks like it's EventStateManager::UpdateCursor that makes us behave in different ways. Entering from below this will update the cursor for an nsInlineFrame
as target and if we leave the inline to enter the nsSubDocumentFrame
, then EventStateManager::UpdateCursor
won't reset the cursor (which makes it behave as expected). Entering from the top makes the nsSubDocumentFrame
be the target, which means it stays a regular pointer.
Edgar, you added this check, do you have an idea of what's going on?
Comment 5•11 days ago
|
||
Ahh... So this check you linked to is wrong / has to check whether the remote content reacts to pointer events.
So probably it should be:
if (nsSubDocumentFrame* f = do_QueryFrame(aTargetFrame)) {
if (auto* fl = f->FrameLoader(); fl && fl->IsRemoteFrame() && f->ContentReactsToPointerEvents()) {
// The sub-frame will update the cursor if needed.
return;
}
}
Assignee | ||
Comment 6•10 days ago
|
||
Emilio's comment #5 should work. Yes, in this case we should not let remote content to update cursor and we don't actually forward the event to the remote content.
Assignee | ||
Comment 7•10 days ago
|
||
Updated•9 days ago
|
Comment 9•6 days ago
|
||
bugherder |
Updated•6 days ago
|
Description
•