Bug 1942018 - Don't forward cursor update to the remote content that doesn’t handle pointer events; r=emilio

Co-authored-by: Emilio Cobos Álvarez <emilio@crisal.io>

Differential Revision: https://phabricator.services.mozilla.com/D234933